<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trojanow.gui.account.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_id"
            android:singleLine="true"
            android:autoText="false"
            android:inputType="textAutoComplete"
            android:maxLength="50" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:inputType="textAutoComplete|textPassword"
            android:singleLine="true"
            android:maxLength="50" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            android:id="@+id/buttonSignIn"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
